streamlining data and model prep py files

--- a/OverallModeling_SMOTE.ipynb
+++ b/OverallModeling_SMOTE.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,11 @@
     "import seaborn as sns\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
+    "# Custom Python Files\n",
+    "from dataPrep import cleanData\n",
+    "from modelPrep import model_prep\n",
+    "from modelPrep import plotROCCurve\n",
+    "\n",
     "%matplotlib inline "
    ]
   },
@@ -66,16 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importlib import reload\n",
-    "import FE\n",
-    "reload(FE)\n",
-    "from FE import FE\n",
-    "from FE import plotROCCurve\n",
-    "from FE import plotROCCurve_smote"
+    "xcols = ['admins', 'employees','contractdays', 'usecompetitors','callcycle_numeric', 'associateddeals','timescontacted','sessions', 'FF', 'strategic']\n",
+    "\n",
+    "# xcols = [\"admins\",\"employees\",\"usecompetitors\",\"contractdays\",\n",
+    "#          \"callcycle\", \"timescontacted\", \"daysAsCustomer\",\n",
+    "#          \"sessions\", \"FF\",\"assoccontacts\",\"associatedpredictionlead\",\n",
+    "#          \"publiclytraded\",\"strategic\", \"MRR\"]\n",
+    "#xcols = ['usecompetitors', 'callcycle','sessions', 'FF', 'strategic']\n",
+    "# xcols = \"ALL\"\n",
+    "\n",
+    "ycol = \"churn\"\n",
+    "\n",
+    "df = cleanData(\"PSCCustomerData.csv\")\n",
+    "\n",
+    "X, y, xcolnames = model_prep(df,xcols,ycol)"
    ]
   },
   {
@@ -84,28 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xcols = ['admins', 'employees','contractdays', 'usecompetitors','callcycle', 'associateddeals','timescontacted','origsource', 'sessions', 'FF', 'strategic']\n",
-    "\n",
-    "#xcols = ['usecompetitors', 'callcycle','sessions', 'FF', 'strategic']\n",
-    "\n",
-    "ycol = \"churn\"\n",
-    "\n",
-    "df = pd.read_csv('data.csv')\n",
-    "\n",
-    "X, y, xcolnames = FE(df,xcols,ycol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "xcols_lr = ['usecompetitors', 'callcycle','sessions', 'FF', 'strategic']\n",
     "\n",
     "ycol_lr = \"churn\"\n",
     "\n",
-    "X_lr, y_lr, xcolnames_lr = FE(df,xcols,ycol)"
+    "X_lr, y_lr, xcolnames_lr = model_prep(df,xcols,ycol)"
    ]
   },
   {
@@ -119,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Gradient Boosting Classifier:  0.83\nGradient Boosting Classifier SMOTE:  0.88\nSupport vector machine(SVM):   0.86\nSupport vector machine(SVM) SMOTE:   0.83\nRandom Forest Classifier:      0.87\nRandom Forest Classifier SMOTE:      0.87\nK Nearest Neighbor Classifier: 0.86\nK Nearest Neighbor Classifier SMOTE: 0.78\nLogistic Regression:           0.86\nLogistic Regression SMOTE:           0.79\nXGBoost:           0.89\nXGBoost SMOTE:           0.87\n"
+     "text": "Gradient Boosting Classifier:  0.83\nGradient Boosting Classifier SMOTE:  0.81\nSupport vector machine(SVM):   0.80\nSupport vector machine(SVM) SMOTE:   0.69\nRandom Forest Classifier:      0.84\nRandom Forest Classifier SMOTE:      0.82\nK Nearest Neighbor Classifier: 0.78\nK Nearest Neighbor Classifier SMOTE: 0.71\nLogistic Regression:           0.80\nLogistic Regression SMOTE:           0.69\nXGBoost:           0.86\nXGBoost SMOTE:           0.82\n"
     }
    ],
    "source": [
