Cleaning up files

--- a/OverallModeling.ipynb
+++ b/OverallModeling.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,9 @@
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "# Custom Python Files\n",
-    "from dataPrep import cleanData\n",
-    "from modelPrep import model_prep\n",
-    "from modelPrep import plotROCCurve\n",
+    "from dataprep.dataPrep import cleanData\n",
+    "from dataprep.modelPrep import model_prep\n",
+    "from dataprep.modelPrep import plotROCCurve\n",
     "\n",
     "%matplotlib inline "
    ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['admins', 'employees', 'contractdays', 'usecompetitors',\n       'callcycle_numeric', 'associateddeals', 'timescontacted', 'sessions',\n       'FF', 'strategic'],\n      dtype='object')"
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
