--- a/OverallModeling_SMOTE.ipynb
+++ b/OverallModeling_SMOTE.ipynb
@@ -53,9 +53,9 @@
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "# Custom Python Files\n",
-    "from dataPrep import cleanData\n",
-    "from modelPrep import model_prep\n",
-    "from modelPrep import plotROCCurve\n",
+    "from dataprep.dataPrep import cleanData\n",
+    "from dataprep.modelPrep import model_prep\n",
+    "from dataprep.modelPrep import plotROCCurve\n",
     "\n",
     "%matplotlib inline "
    ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
